--- a/week1/assignement/index.html
+++ b/week1/assignement/index.html
@@ -2,13 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Gold and Currencies Trader Inc</title>
 
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 </head>
 <body>
-    
+    <h1>Welcome to Gold and Currencies Trader Inc</h1>
+    <nav>
+        <h2>Navigation</h2>
+        <ul>
+            <li><a href="index.html" title="Homepage">Home</a></li>
+            <li><a href="#" title="Our rates">Our rates</a></li>
+        </ul>
+    </nav>
+    <p>We are trading, buying and selling currencies and gold pepites, with no commissions.</p>
+    <p>Explore our services, and get our rates from the top menu.</p>
+    <h2>Menu</h2>
+    <ul>
+        <li><a href="#" target="_blank" title="Open Exchange Currencies in a new window">Exchange Currencies</a></li>
+        <li><a href="#" target="_blank" title="Open formular to buy gold in a new window">Buy Gold</a></li>
+        <li><a href="http://www.nyse.com/" target="_blank" title="Open Wall Street Official Site in a new window">Wall Street Official Site</a></li>
+    </ul>
 </body>
 </html>
