--- a/week1/assignement/index.html
+++ b/week1/assignement/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Gold and Currencies Trader Inc</title>
-
+    <link href="assets/css/screen.css" type="text/css" media="screen"/>
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
