fix css link fix links

--- a/week1/assignement/index.html
+++ b/week1/assignement/index.html
@@ -21,8 +21,8 @@
     <p>Explore our services, and get our rates from the top menu.</p>
     <h2>Our services</h2>
     <ul>
-        <li><a href="#" target="_blank" title="Open Exchange Currencies in a new window">Exchange Currencies</a></li>
-        <li><a href="#" target="_blank" title="Open formular to buy gold in a new window">Buy Gold</a></li>
+        <li><a href="xchange.html" target="_blank" title="Open Exchange Currencies in a new window">Exchange Currencies</a></li>
+        <li><a href="buyg.html" target="_blank" title="Open formular to buy gold in a new window">Buy Gold</a></li>
         <li><a href="http://www.nyse.com/" target="_blank" title="Open Wall Street Official Site in a new window">Wall Street Official Site</a></li>
     </ul>
 </body>
