--- a/week1/assignement/end.html
+++ b/week1/assignement/end.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>End</title>
-    
+    <link rel="stylesheet" href="assets/css/screen.css" type="text/css" media="screen" />
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 </head>
 <body>
     <h1>Operation Completed</h1>
-    <p>Thanks for buying at Gold and Currencies Trader Inc</p>
+    <p class="success">Thanks for buying at Gold and Currencies Trader Inc</p>
     <p><a href="index.html" title="Open homepage in the same window">Back to homepage</a></p>
 </body>
 </html>
