--- a/week1/assignement/rates.html
+++ b/week1/assignement/rates.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Our rates</title>
-    
+    <link rel="stylesheet" href="assets/css/screen.css" type="text/css" media="screen" />
     <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 </head>
 <body>
