--- a/week1/assignement/index.html
+++ b/week1/assignement/index.html
@@ -16,14 +16,20 @@
             <li><a href="rates.html" title="Our rates">Our rates</a></li>
         </ul>
     </nav>
-    <h1>Welcome to Gold and Currencies Trader Inc</h1>
-    <p>We are trading, buying and selling currencies and gold pepites, with no commissions.</p>
-    <p>Explore our services, and get our rates from the top menu.</p>
-    <h2>Our services</h2>
-    <ul>
-        <li><a href="xchange.html" target="_blank" title="Open Exchange Currencies in a new window">Exchange Currencies</a></li>
-        <li><a href="buyg.html" target="_blank" title="Open formular to buy gold in a new window">Buy Gold</a></li>
-        <li><a href="http://www.nyse.com/" target="_blank" title="Open Wall Street Official Site in a new window">Wall Street Official Site</a></li>
-    </ul>
+    <div id="container">
+        <div id="content">
+            <h1>Welcome to Gold and Currencies Trader Inc</h1>
+            <p>We are trading, buying and selling currencies and gold pepites, with no commissions.</p>
+            <p>Explore our services, and get our rates from the top menu.</p>
+        </div><!-- /#content -->
+        <div id="sidebar">
+            <h2>Our services</h2>
+            <ul>
+                <li><a href="xchange.html" target="_blank" title="Open Exchange Currencies in a new window">Exchange Currencies</a></li>
+                <li><a href="buyg.html" target="_blank" title="Open formular to buy gold in a new window">Buy Gold</a></li>
+                <li><a href="http://www.nyse.com/" target="_blank" title="Open Wall Street Official Site in a new window">Wall Street Official Site</a></li>
+            </ul>
+        </div><!-- /#sidebar -->
+    </div><!-- /#container -->
 </body>
 </html>
