--- a/week1/assignement/index.html
+++ b/week1/assignement/index.html
@@ -25,8 +25,8 @@
         <div id="sidebar">
             <h2>Our services</h2>
             <ul>
-                <li><a href="xchange.html" target="_blank" title="Open Exchange Currencies in a new window">Exchange Currencies</a></li>
-                <li><a href="buyg.html" target="_blank" title="Open formular to buy gold in a new window">Buy Gold</a></li>
+                <li><a href="xchange.html" target="_self" title="Open Exchange Currencies">Exchange Currencies</a></li>
+                <li><a href="buyg.html" target="_self" title="Open formular to buy gold">Buy Gold</a></li>
                 <li><a href="http://www.nyse.com/" target="_blank" title="Open Wall Street Official Site in a new window">Wall Street Official Site</a></li>
             </ul>
         </div><!-- /#sidebar -->
