add div container

--- a/week1/assignement/end.html
+++ b/week1/assignement/end.html
@@ -9,8 +9,17 @@
     <![endif]-->
 </head>
 <body>
-    <h1>Operation Completed</h1>
-    <p class="success">Thanks for buying at Gold and Currencies Trader Inc</p>
-    <p><a href="index.html" title="Open homepage in the same window">Back to homepage</a></p>
+    <nav>
+        <h2 class="hide">Navigation</h2>
+        <ul>
+            <li><a href="index.html" title="Homepage" target="_self">Home</a></li>
+            <li><a href="rates.html" title="Our rates" target="_self">Our rates</a></li>
+        </ul>
+    </nav>
+    <div id="container">
+        <h1>Operation Completed</h1>
+        <p class="success">Thanks for buying at Gold and Currencies Trader Inc</p>
+        <p><a href="index.html" title="Open homepage in the same window">Back to homepage</a></p>
+    </div>
 </body>
 </html>
