--- a/week1/assignement/rates.html
+++ b/week1/assignement/rates.html
@@ -9,19 +9,28 @@
     <![endif]-->
 </head>
 <body>
-    <h1>Rates</h1>
-    <dl>
-        <dt>1 Euro</dt>
-        <dd>1.50 US$</dd>
-        <dd>130 Yens</dd>
+    <nav>
+        <h2 class="hide">Navigation</h2>
+        <ul>
+            <li><a href="index.html" title="Homepage" target="_self">Home</a></li>
+            <li><a href="rates.html" title="Our rates" target="_self">Our rates</a></li>
+        </ul>
+    </nav>
+    <div id="container">
+        <h1>Rates</h1>
+        <dl>
+            <dt>1 Euro</dt>
+            <dd>1.50 US$</dd>
+            <dd>130 Yens</dd>
 
-        <dt>1 US$</dt>
-        <dd>0.66 Euro</dd>
-        <dd>85 Yens</dd>
+            <dt>1 US$</dt>
+            <dd>0.66 Euro</dd>
+            <dd>85 Yens</dd>
 
-        <dt>1 Yen</dt>
-        <dd>0.008 Euro</dd>
-        <dd>0.012 US$</dd>
-    </dl>
+            <dt>1 Yen</dt>
+            <dd>0.008 Euro</dd>
+            <dd>0.012 US$</dd>
+        </dl>
+    </div>
 </body>
 </html>
