--- a/week1/assignement/buyg.html
+++ b/week1/assignement/buyg.html
@@ -9,18 +9,26 @@
     <![endif]-->
 </head>
 <body>
-    <h1>Buying Gold</h1>
-    <p>Rates: 150$/Kg</p>
-    <form action="end.html">
-        <p>
-            <label for="amount">Amount (in <abbr title="Kilogram">Kg</abbr>)</label><br />
-            <input id="amount" type="text" size="6" />
-        </p>
-        <p>
-            <input type="button" value="Cancel" />
-            <input type="submit" value="Buy" />
-        </p>
-    </form>
-    
+    <nav>
+        <h2 class="hide">Navigation</h2>
+        <ul>
+            <li><a href="index.html" title="Homepage" target="_self">Home</a></li>
+            <li><a href="rates.html" title="Our rates" target="_self">Our rates</a></li>
+        </ul>
+    </nav>
+    <div id="container">
+        <h1>Buying Gold</h1>
+        <p>Rates: 150$/Kg</p>
+        <form action="end.html">
+            <p>
+                <label for="amount">Amount (in <abbr title="Kilogram">Kg</abbr>)</label><br />
+                <input id="amount" type="text" size="6" />
+            </p>
+            <p>
+                <input type="button" value="Cancel" />
+                <input type="submit" value="Buy" />
+            </p>
+        </form>
+    </div>
 </body>
 </html>
