--- a/week1/assignement/xchange.html
+++ b/week1/assignement/xchange.html
@@ -9,32 +9,41 @@
     <![endif]-->
 </head>
 <body>
-    <h1>Exchange Currencies</h1>
-    <form action="end.html">
-        <p>
-            <label for="amount">Amount</label><br />
-            <input id="amount" type="text" size="6">
-        </p>
-        <p>
-            <label for="from">From</label><br />
-            <select id="from">
-                <option>US$</option>
-                <option>Euro</option>
-                <option>Yens</option>
-            </select>
-        </p>
-        <p>
-            <label for="to">To</label><br />
-            <select id="to">
-                <option>US$</option>
-                <option>Euro</option>
-                <option>Yens</option>
-            </select>
-        </p>
-        <p>
-            <input type="button" value="Cancel" />
-            <input type="submit" value="Proceed" />
-        </p>
-    </form>
+    <nav>
+        <h2 class="hide">Navigation</h2>
+        <ul>
+            <li><a href="index.html" title="Homepage" target="_self">Home</a></li>
+            <li><a href="rates.html" title="Our rates" target="_self">Our rates</a></li>
+        </ul>
+    </nav>
+    <div id="container">
+        <h1>Exchange Currencies</h1>
+        <form action="end.html">
+            <p>
+                <label for="amount">Amount</label><br />
+                <input id="amount" type="text" size="6">
+            </p>
+            <p>
+                <label for="from">From</label><br />
+                <select id="from">
+                    <option>US$</option>
+                    <option>Euro</option>
+                    <option>Yens</option>
+                </select>
+            </p>
+            <p>
+                <label for="to">To</label><br />
+                <select id="to">
+                    <option>US$</option>
+                    <option>Euro</option>
+                    <option>Yens</option>
+                </select>
+            </p>
+            <p>
+                <input type="button" value="Cancel" />
+                <input type="submit" value="Proceed" />
+            </p>
+        </form>
+    </div>
 </body>
 </html>
