fix form and add some style

--- a/week1/assignement/buyg.html
+++ b/week1/assignement/buyg.html
@@ -22,13 +22,14 @@
         <form action="end.html">
             <p>
                 <label for="amount">Amount (in <abbr title="Kilogram">Kg</abbr>)</label><br />
-                <input id="amount" type="text" size="6" />
+                <input id="amount" type="text" class="text" />
             </p>
             <p>
                 <input type="button" value="Cancel" />
                 <input type="submit" value="Buy" />
             </p>
         </form>
+        <p class="info">By clicking the "Buy" button, you will be redirected on the confirmation page.</p>
     </div>
 </body>
 </html>
