--- a/week1/assignement/xchange.html
+++ b/week1/assignement/xchange.html
@@ -21,7 +21,7 @@
         <form action="end.html">
             <p>
                 <label for="amount">Amount</label><br />
-                <input id="amount" type="text" size="6">
+                <input id="amount" type="text" class="text" />
             </p>
             <p>
                 <label for="from">From</label><br />
@@ -44,6 +44,7 @@
                 <input type="submit" value="Proceed" />
             </p>
         </form>
+        <p class="info">By clicking the "Proceed" button, you will be redirected on the confirmation page.</p>
     </div>
 </body>
 </html>
