add footer, add reset button

--- a/week1/assignement/buyg.html
+++ b/week1/assignement/buyg.html
@@ -25,11 +25,14 @@
                 <input id="amount" type="text" class="text" />
             </p>
             <p>
-                <input type="button" value="Cancel" />
+                <input type="reset" value="Cancel" />
                 <input type="submit" value="Buy" />
             </p>
         </form>
         <p class="info">By clicking the "Buy" button, you will be redirected on the confirmation page.</p>
-    </div>
+        <footer>
+            <p><a href="http://validator.w3.org/check?uri=referer" title="Validate this document. Link open in same window">Validator</a></p>
+        </footer>
+    </div><!-- /#container -->
 </body>
 </html>
