--- a/week1/assignement/end.html
+++ b/week1/assignement/end.html
@@ -20,6 +20,9 @@
         <h1>Operation Completed</h1>
         <p class="success">Thanks for buying at Gold and Currencies Trader Inc</p>
         <p><a href="index.html" title="Open homepage in the same window">Back to homepage</a></p>
-    </div>
+        <footer>
+            <p><a href="http://validator.w3.org/check?uri=referer" title="Validate this document. Link open in same window">Validator</a></p>
+        </footer>
+    </div><!-- /#container -->
 </body>
 </html>
