--- a/week1/assignement/index.html
+++ b/week1/assignement/index.html
@@ -30,6 +30,9 @@
                 <li><a href="http://www.nyse.com/" target="_blank" title="Open Wall Street Official Site in a new window">Wall Street Official Site</a></li>
             </ul>
         </div><!-- /#sidebar -->
+        <footer>
+            <p><a href="http://validator.w3.org/check?uri=referer" title="Validate this document. Link open in same window">Validator</a></p>
+        </footer>
     </div><!-- /#container -->
 </body>
 </html>
