--- a/week1/assignement/rates.html
+++ b/week1/assignement/rates.html
@@ -19,18 +19,21 @@
     <div id="container">
         <h1>Rates</h1>
         <dl>
-            <dt>1 Euro</dt>
-            <dd>1.50 US$</dd>
-            <dd>130 Yens</dd>
+            <dt>Euro</dt>
+            <dd>1 Euro = 1.50 US$</dd>
+            <dd>1 Euro = 130 Yens</dd>
 
-            <dt>1 US$</dt>
-            <dd>0.66 Euro</dd>
-            <dd>85 Yens</dd>
+            <dt>US$</dt>
+            <dd>1 US$ = 0.66 Euro</dd>
+            <dd>1 US$ = 85 Yens</dd>
 
-            <dt>1 Yen</dt>
-            <dd>0.008 Euro</dd>
-            <dd>0.012 US$</dd>
+            <dt>Yen</dt>
+            <dd>1 Yen = 0.008 Euro</dd>
+            <dd>1 Yen = 0.012 US$</dd>
         </dl>
-    </div>
+        <footer>
+            <p><a href="http://validator.w3.org/check?uri=referer" title="Validate this document. Link open in same window">Validator</a></p>
+        </footer>
+    </div><!-- /#container -->
 </body>
 </html>
