--- a/week1/assignement/xchange.html
+++ b/week1/assignement/xchange.html
@@ -40,11 +40,14 @@
                 </select>
             </p>
             <p>
-                <input type="button" value="Cancel" />
+                <input type="reset" value="Cancel" />
                 <input type="submit" value="Proceed" />
             </p>
         </form>
         <p class="info">By clicking the "Proceed" button, you will be redirected on the confirmation page.</p>
-    </div>
+        <footer>
+            <p><a href="http://validator.w3.org/check?uri=referer" title="Validate this document. Link open in same window">Validator</a></p>
+        </footer>
+    </div><!-- /#container -->
 </body>
 </html>
