fix span and dive issue

--- a/week1/peoplelist.html
+++ b/week1/peoplelist.html
@@ -30,8 +30,8 @@
     <div id="superhero">
         <dl>
             <dt><span class="cell"><span class="hide">Real name : </span>Clark Kent</span></dt>
-            <dd><span class="cell"><span class="hide">City : </span>Metropolis</div></dd>
-            <dd><span class="cell"><span class="hide">Dressroom location : </span>Telephone booth</div></dd>
+            <dd><span class="cell"><span class="hide">City : </span>Metropolis</span></dd>
+            <dd><span class="cell"><span class="hide">Dressroom location : </span>Telephone booth</span></dd>
         </dl>
         <dl>
             <dt><span class="cell"><span class="hide">Real name : </span>Bruce Wayne</span></dt>
