--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ hey !
             <ul>
                 <li>Assignement
                     <ul>
-                        <li><a href="/week1/assignement/index.html" title accesskey="Assignement for week 1">Assignment</a></li>
+                        <li><a href="week1/assignement/index.html" title accesskey="Assignement for week 1">Assignment</a></li>
                         <li>Trader files</li>
                     </ul>
                 </li>
