--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style type="text/css">
         body {
             margin-top: 1.0em;
-            background-color: #c8eae5;
-            font-family: Helvetica, Arial, FreeSans, san-serif;
+            background-color: #eeeeee;
+            font-family: Helvetica, Arial, FreeSans, verdana, sans-serif;
             color: #000000;
         }
         #container {
@@ -21,9 +21,18 @@
         h1 a { text-decoration: none }
         h2 { font-size: 1.5em; color: #37151a; }
         h3 { text-align: center; color: #37151a; }
-        a { color: #37151a; }
+        a { color: #E01B6A; }
         .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
         .download { float: right; }
+        nav {
+            border: 1px solid #E01B6A;
+            padding: 0.5em;
+            border-radius: 0.5em;
+            background-color: #FFD9E8;
+        }
+        nav h2 {
+            margin-top: 0;
+        }
         pre { background: #000; color: #fff; padding: 15px;}
         hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
         .footer { text-align:center; padding-top:30px; font-style: italic; }
@@ -49,35 +58,54 @@
         Material for the Introduction to W3C Mobile Web and Applications Best Practices
     </div>
 
-
-
-
-
-
-
-
-
+    <nav>
+        <h2>Navigation</h2>
+        <ul>
+            <li>Week 1
+                <ul>
+                    <li>Assgnement
+                        <ul>
+                            <li><a href="week1/trader/Overview.html" title="Trader work files">Trader work files</a></li>
+                            <li><a href="week1/assignement/index.html" title="Trader reformatted files">Trader reformatted files</a></li>
+                        </ul>
+                    </li>
+                    <li>Activity
+                        <ul>
+                            <li><a href="week1/activity.html" target="Reformat table">Reformat table</a></li>
+                            <li><a href="week1/calendar.html" target="Calendar without table">Calendar without table draft</a></li>
+                            <li><a href="week1/peoplelist.html" target="List of people without table">People list without table draft</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li><!-- /week 1 -->
+            <li>Week 2</li><!-- /week 2 -->
+            <li>Week 3</li><!-- /week 3 -->
+            <li>Week 4</li><!-- /week 4 -->
+            <li>Week 5</li><!-- /week 5 -->
+            <li>Week 6</li><!-- /week 6 -->
+            <li>Week 7</li><!-- /week 7 -->
+            <li>Week 8</li><!-- /week 8 -->
+        </ul>
+    </nav>
 
     <h2>Authors</h2>
-    <p>alienlebarge (cedric.aellen@alienlebarge.ch)
-        <br/>      </p>
+    <p>alienlebarge (cedric.aellen@alienlebarge.ch)</p>
 
 
 
     <h2>Contact</h2>
-    <p>Cédric Aellen (cedric.aellen@alienlebarge.ch)
-        <br/>      </p>
+    <p>Cédric Aellen (cedric.aellen@alienlebarge.ch)</p>
 
 
     <h2>Download</h2>
     <p>
         You can download this project in either
         <a href="https://github.com/alienlebarge/BPIntro/zipball/master">zip</a> or
-        <a href="https://github.com/alienlebarge/BPIntro/tarball/master">tar formats.
+        <a href="https://github.com/alienlebarge/BPIntro/tarball/master">tar formats</a>.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
         by running:
-    <pre>$ git clone git://github.com/alienlebarge/BPIntro</pre>
+        <pre>$ git clone git://github.com/alienlebarge/BPIntro</pre>
     </p>
 
     <div class="footer">
