--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <div class="download">
         <a href="https://github.com/alienlebarge/BPIntro/zipball/master">
-            <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
+            <img width="90" src="https://github.com/images/modules/download/zip.png" alt=""></a>
         <a href="https://github.com/alienlebarge/BPIntro/tarball/master">
-            <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
+            <img width="90" src="https://github.com/images/modules/download/tar.png" alt=""></a>
     </div>
 
     <h1><a href="https://github.com/alienlebarge/BPIntro">BPIntro</a>
@@ -99,14 +99,13 @@
 
     <h2>Download</h2>
     <p>
-        You can download this project in either
-        <a href="https://github.com/alienlebarge/BPIntro/zipball/master">zip</a> or
-        <a href="https://github.com/alienlebarge/BPIntro/tarball/master">tar formats</a>.
+        You can download this project in either <a href="https://github.com/alienlebarge/BPIntro/zipball/master">zip</a> or <a href="https://github.com/alienlebarge/BPIntro/tarball/master">tar formats</a>.
     </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-        by running:
-        <pre>$ git clone git://github.com/alienlebarge/BPIntro</pre>
+
+    <p>
+        You can also clone the project with <a href="http://git-scm.com">Git</a> by running:
     </p>
+    <pre>$ git clone git://github.com/alienlebarge/BPIntro</pre>
 
     <div class="footer">
         get the source code on GitHub : <a href="https://github.com/alienlebarge/BPIntro">alienlebarge/BPIntro</a>
