rename assignment folder

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <ul>
             <li>Week 1
                 <ul>
-                    <li>Assgnement
+                    <li>Assignment
                         <ul>
                             <li><a href="week1/trader/Overview.html" title="Trader work files">Trader work files</a></li>
-                            <li><a href="week1/assignement/index.html" title="Trader reformatted files">Trader reformatted files</a></li>
+                            <li><a href="week1/assignment/index.html" title="Trader reformatted files">Trader reformatted files</a></li>
                         </ul>
                     </li>
                     <li>Activity
