add link to the W3C course

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span class="small">by <a href="https://github.com/alienlebarge">alienlebarge</a></span></h1>
 
     <div class="description">
-        Material for the Introduction to W3C Mobile Web and Applications Best Practices
+        Material for the <a href="http://www.w3techcourses.com/course/category.php?id=3" title="Open in new window the course description">Introduction to W3C Mobile Web and Applications Best Practices</a> course.
     </div>
 
     <nav>
