--- a/index.html
+++ b/index.html
@@ -5,38 +5,11 @@
 
     <title>alienlebarge/BPIntro @ GitHub</title>
 
-    <style type="text/css">
-        body {
-            margin-top: 1.0em;
-            background-color: #eeeeee;
-            font-family: Helvetica, Arial, FreeSans, verdana, sans-serif;
-            color: #000000;
-        }
-        #container {
-            margin: 0 auto;
-            width: 700px;
-        }
-        h1 { font-size: 3.8em; color: #37151a; margin-bottom: 3px; }
-        h1 .small { font-size: 0.4em; }
-        h1 a { text-decoration: none }
-        h2 { font-size: 1.5em; color: #37151a; }
-        h3 { text-align: center; color: #37151a; }
-        a { color: #E01B6A; }
-        .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-        .download { float: right; }
-        nav {
-            border: 1px solid #E01B6A;
-            padding: 0.5em;
-            border-radius: 0.5em;
-            background-color: #FFD9E8;
-        }
-        nav h2 {
-            margin-top: 0;
-        }
-        pre { background: #000; color: #fff; padding: 15px;}
-        hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-        .footer { text-align:center; padding-top:30px; font-style: italic; }
-    </style>
+    <link rel="stylesheet" href="assets/css/screen.css" type="text/css" media="projection, screen"/>
+
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
 </head>
 
 <body>
