remove target=_self
the attribut is not usefull if you open link in the same window

--- a/week1/assignment/index.html
+++ b/week1/assignment/index.html
@@ -12,8 +12,8 @@
     <nav>
         <h2 class="hide">Navigation</h2>
         <ul>
-            <li><a href="index.html" title="Homepage" target="_self">Home</a></li>
-            <li><a href="rates.html" title="Our rates" target="_self">Our rates</a></li>
+            <li><a href="index.html" title="Homepage">Home</a></li>
+            <li><a href="rates.html" title="Our rates">Our rates</a></li>
         </ul>
     </nav>
     <div id="container">
@@ -25,8 +25,8 @@
         <div id="sidebar">
             <h2>Our services</h2>
             <ul>
-                <li><a href="xchange.html" target="_self" title="Open Exchange Currencies">Exchange Currencies</a></li>
-                <li><a href="buyg.html" target="_self" title="Open formular to buy gold">Buy Gold</a></li>
+                <li><a href="xchange.html" title="Open Exchange Currencies">Exchange Currencies</a></li>
+                <li><a href="buyg.html" title="Open formular to buy gold">Buy Gold</a></li>
                 <li><a href="http://www.nyse.com/" target="_blank" title="Open Wall Street Official Site in a new window">Wall Street Official Site</a></li>
             </ul>
         </div><!-- /#sidebar -->
