--- a/week1/assignment/xchange.html
+++ b/week1/assignment/xchange.html
@@ -12,8 +12,8 @@
     <nav>
         <h2 class="hide">Navigation</h2>
         <ul>
-            <li><a href="index.html" title="Homepage" target="_self">Home</a></li>
-            <li><a href="rates.html" title="Our rates" target="_self">Our rates</a></li>
+            <li><a href="index.html" title="Homepage">Home</a></li>
+            <li><a href="rates.html" title="Our rates">Our rates</a></li>
         </ul>
     </nav>
     <div id="container">
