--- a/week1/assignment/buyg.html
+++ b/week1/assignment/buyg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Buy Gold</title>
-    <link rel="stylesheet" href="assets/css/screen.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="assets/css/screen.css" media="screen" />
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
