remove <br /> after the <label>.
It is replace by a CSS style display:block on the <label> element.
In this case, <br/> have nothing to do with content

--- a/week1/assignment/buyg.html
+++ b/week1/assignment/buyg.html
@@ -21,7 +21,7 @@
         <p>Rates: 150$/Kg</p>
         <form action="end.html">
             <p>
-                <label for="amount">Amount (in <abbr title="Kilogram">Kg</abbr>)</label><br />
+                <label for="amount">Amount (in <abbr title="Kilogram">Kg</abbr>)</label>
                 <input id="amount" type="text" class="text" />
             </p>
             <p>
