--- a/week1/assignment/xchange.html
+++ b/week1/assignment/xchange.html
@@ -20,11 +20,11 @@
         <h1>Exchange Currencies</h1>
         <form action="end.html">
             <p>
-                <label for="amount">Amount</label><br />
+                <label for="amount">Amount</label>
                 <input id="amount" type="text" class="text" />
             </p>
             <p>
-                <label for="from">From</label><br />
+                <label for="from">From</label>
                 <select id="from">
                     <option>US$</option>
                     <option>Euro</option>
@@ -32,7 +32,7 @@
                 </select>
             </p>
             <p>
-                <label for="to">To</label><br />
+                <label for="to">To</label>
                 <select id="to">
                     <option>US$</option>
                     <option>Euro</option>
