replace the <div> element for the sidebar with <aside>
the tag "aside" is more appropriate in HTML5 for this kind of content.

--- a/week1/assignment/index.html
+++ b/week1/assignment/index.html
@@ -22,14 +22,14 @@
             <p>We are trading, buying and selling currencies and gold pepites, with no commissions.</p>
             <p>Explore our services, and get our rates from the top menu.</p>
         </div><!-- /#content -->
-        <div id="sidebar">
+        <aside id="sidebar">
             <h2>Our services</h2>
             <ul>
                 <li><a href="xchange.html" title="Open Exchange Currencies">Exchange Currencies</a></li>
                 <li><a href="buyg.html" title="Open formular to buy gold">Buy Gold</a></li>
                 <li><a href="http://www.nyse.com/" target="_blank" title="Open Wall Street Official Site in a new window">Wall Street Official Site</a></li>
             </ul>
-        </div><!-- /#sidebar -->
+        </aside><!-- /#sidebar -->
         <footer>
             <p><a href="http://validator.w3.org/check?uri=referer" title="Validate this document. Link open in same window">Validator</a></p>
         </footer>
