refacto css link
type=text/css is no more used in HTML5

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>alienlebarge/BPIntro @ GitHub</title>
 
-    <link rel="stylesheet" href="assets/css/screen.css" type="text/css" media="projection, screen"/>
+    <link rel="stylesheet" href="assets/css/screen.css" media="projection, screen"/>
 
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
