--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -13,12 +13,12 @@
     <div id="container">
 
         <!-- header -->
-        <div id="header">
+        <header>
             <h1>Lyrics of Beethoven's Ode to Joy</h1>
-        </div><!-- /header -->
+        </header><!-- /header -->
 
         <!-- sidebar -->
-        <div id="sidebar">
+        <aside id="sidebar">
             <h2>Navigation</h2>
             <ul>
                 <li><a href="#">Lyric Repository's Home</a></li>
@@ -34,54 +34,54 @@
                 <li><a href="#">Privacy policy</a></li>
                 <li><a href="#">Site Map</a></li>
             </ul>
-        </div><!-- /sidebar -->
+        </aside><!-- /sidebar -->
 
         <!-- content -->
         <div id="content">
-            <p style="float:right;"><img width="400" src="beethoven.jpg" /></p>
+            <p><img src="beethoven.jpg" /></p>
             <p>Beethoven's last symphony includes part of the <cite>Ode to Joy</cite> poem's written by Friedrich Schiller.</p>
             <blockquote>
-            <p>Freude, schöner Götterfunken<br />
-            Tochter aus Elysium,<br />
-            Wir betreten feuertrunken,<br />
-            Himmlische, dein Heiligtum!<br />
-            Deine Zauber binden wieder<br />
-            Was die Mode streng geteilt;<br />
-            Alle Menschen werden Brüder,<br />
-            Wo dein sanfter Flügel weilt.</p>
+                <p>Freude, schöner Götterfunken<br />
+                Tochter aus Elysium,<br />
+                Wir betreten feuertrunken,<br />
+                Himmlische, dein Heiligtum!<br />
+                Deine Zauber binden wieder<br />
+                Was die Mode streng geteilt;<br />
+                Alle Menschen werden Brüder,<br />
+                Wo dein sanfter Flügel weilt.</p>
 
-            <p>Wem der große Wurf gelungen,<br />
-            Eines Freundes Freund zu sein;<br />
-            Wer ein holdes Weib errungen,<br />
-            Mische seinen Jubel ein!<br />
-            Ja, wer auch nur eine Seele<br />
-            Sein nennt auf dem Erdenrund!<br />
-            Und wer's nie gekonnt, der stehle<br />
-            Weinend sich aus diesem Bund!</p>
+                <p>Wem der große Wurf gelungen,<br />
+                Eines Freundes Freund zu sein;<br />
+                Wer ein holdes Weib errungen,<br />
+                Mische seinen Jubel ein!<br />
+                Ja, wer auch nur eine Seele<br />
+                Sein nennt auf dem Erdenrund!<br />
+                Und wer's nie gekonnt, der stehle<br />
+                Weinend sich aus diesem Bund!</p>
 
-            <p>Freude trinken alle Wesen<br />
-            An den Brüsten der Natur;<br />
-            Alle Guten, alle Bösen<br />
-            Folgen ihrer Rosenspur.<br />
-            Küsse gab sie uns und Reben,<br />
-            Einen Freund, geprüft im Tod;<br />
-            Wollust ward dem Wurm gegeben,<br />
-            und der Cherub steht vor Gott.</p>
+                <p>Freude trinken alle Wesen<br />
+                An den Brüsten der Natur;<br />
+                Alle Guten, alle Bösen<br />
+                Folgen ihrer Rosenspur.<br />
+                Küsse gab sie uns und Reben,<br />
+                Einen Freund, geprüft im Tod;<br />
+                Wollust ward dem Wurm gegeben,<br />
+                und der Cherub steht vor Gott.</p>
 
-            <p>Froh,<br />
-            wie seine Sonnen fliegen<br />
-            Durch des Himmels prächt'gen Plan,<br />
-            Laufet, Brüder, eure Bahn,<br />
-            Freudig, wie ein Held zum Siegen.</p>
+                <p>Froh,<br />
+                wie seine Sonnen fliegen<br />
+                Durch des Himmels prächt'gen Plan,<br />
+                Laufet, Brüder, eure Bahn,<br />
+                Freudig, wie ein Held zum Siegen.</p>
 
-            <p>Seid umschlungen, Millionen!<br />
-            Diesen Kuß der ganzen Welt!<br />
-            Brüder, über'm Sternenzelt<br />
-            Muß ein lieber Vater wohnen.<br />
-            Ihr stürzt nieder, Millionen?<br />
-            Ahnest du den Schöpfer, Welt?<br />
-            Such' ihn über'm Sternenzelt!<br />
-            Über Sternen muß er wohnen.</p>
+                <p>Seid umschlungen, Millionen!<br />
+                Diesen Kuß der ganzen Welt!<br />
+                Brüder, über'm Sternenzelt<br />
+                Muß ein lieber Vater wohnen.<br />
+                Ihr stürzt nieder, Millionen?<br />
+                Ahnest du den Schöpfer, Welt?<br />
+                Such' ihn über'm Sternenzelt!<br />
+                Über Sternen muß er wohnen.</p>
             </blockquote>
 
             <h2>Beethoven's symphonies</h2>
@@ -152,9 +152,9 @@
         </div><!-- /content -->
 
         <!-- footer -->
-        <div id="footer">
+        <footer>
             <p>This page was built for demonstration purposes.</p>
-        </div><!-- /footer -->
+        </footer><!-- /footer -->
 
     </div><!-- /container -->
 
