--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -85,69 +85,53 @@
             </blockquote>
 
             <h2>Beethoven's symphonies</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Symphony</th><th>Op.</th><th>Tone</th><th>Year</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 1</th>
-                        <td>Op. 21</td>
-                        <td>C Major</td>
-                        <td>1800</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 2</th>
-                        <td>Op. 36</td>
-                        <td>D Major</td>
-                        <td>1802</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 3, "Eroica"</th>
-                        <td>Op. 55</td>
-                        <td>E flat Major</td>
-                        <td>1804</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 4</th>
-                        <td>Op. 60</td>
-                        <td>B flat Major</td>
-                        <td>1806</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 5</th>
-                        <td>Op. 67</td>
-                        <td>C Minor</td>
-                        <td>1808</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 6, "Pastorale"</th>
-                        <td>Op. 68</td>
-                        <td>F Major</td>
-                        <td>1808</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 7</th>
-                        <td>Op. 92</td>
-                        <td>A Major</td>
-                        <td>1812</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 8</th>
-                        <td>Op. 93</td>
-                        <td>F Major</td>
-                        <td>1813</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><img src='music.png' /> Symphony 9</th>
-                        <td>Op. 125</td>
-                        <td>D Minor</td>
-                        <td>1824</td>
-                    </tr>
-                </tbody>
-            </table>
+            <dl>
+                <dt>Symphony 1</dt>
+                <dd><abbr title="Opera">Op.</abbr> 21</dd>
+                <dd>C Major</dd>
+                <dd>1800</dd>
+
+                <dt>Symphony 2</dt>
+                <dd><abbr title="Opera">Op.</abbr> 36</dd>
+                <dd>D Major</dd>
+                <dd>1802</dd>
+
+                <dt>Symphony 3, "Eroica"</dt>
+                <dd><abbr title="Opera">Op.</abbr> 55</dd>
+                <dd>E flat Major</dd>
+                <dd>1804</dd>
+
+                <dt>Symphony 4</dt>
+                <dd><abbr title="Opera">Op.</abbr> 60</dd>
+                <dd>B flat Major</dd>
+                <dd>1806</dd>
+
+                <dt>Symphony 5</dt>
+                <dd><abbr title="Opera">Op.</abbr> 67</dd>
+                <dd>C Minor</dd>
+                <dd>1808</dd>
+
+                <dt>Symphony 6, "Pastorale"</dt>
+                <dd><abbr title="Opera">Op.</abbr> 68</dd>
+                <dd>F Major</dd>
+                <dd>1808</dd>
+
+                <dt>Symphony 7</dt>
+                <dd><abbr title="Opera">Op.</abbr> 92</dd>
+                <dd>A Major</dd>
+                <dd>1812</dd>
+
+                <dt>Symphony 8</dt>
+                <dd><abbr title="Opera">Op.</abbr> 93</dd>
+                <dd>F Major</dd>
+                <dd>1813</dd>
+
+                <dt>Symphony 9</dt>
+                <dd><abbr title="Opera">Op.</abbr> 125</dd>
+                <dd>D Minor</dd>
+                <dd>1824</dd>
+
+            </dl>
 
         </div><!-- /content -->
 
