add the viewport

--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 	<title>Lyrics of Beethoven's Ode to Joy - Lyrics repository</title>
     <link rel="stylesheet" href="style.css" media="screen" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
