--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -90,47 +90,47 @@
                 <dt>Symphony 1</dt>
                 <dd><abbr title="Opera">Op.</abbr> 21</dd>
                 <dd>Tone : C Major</dd>
-                <dd>Year : 1800</dd>
+                <dd class="last">Year : 1800</dd>
 
                 <dt>Symphony 2</dt>
                 <dd><abbr title="Opera">Op.</abbr> 36</dd>
                 <dd>D Major</dd>
-                <dd>Year : 1802</dd>
+                <dd class="last">Year : 1802</dd>
 
                 <dt>Symphony 3, "Eroica"</dt>
                 <dd><abbr title="Opera">Op.</abbr> 55</dd>
                 <dd>Tone : E flat Major</dd>
-                <dd>Year : 1804</dd>
+                <dd class="last">Year : 1804</dd>
 
                 <dt>Symphony 4</dt>
                 <dd><abbr title="Opera">Op.</abbr> 60</dd>
                 <dd>Tone : B flat Major</dd>
-                <dd>Year : 1806</dd>
+                <dd class="last">Year : 1806</dd>
 
                 <dt>Symphony 5</dt>
                 <dd><abbr title="Opera">Op.</abbr> 67</dd>
                 <dd>Tone : C Minor</dd>
-                <dd>Year : 1808</dd>
+                <dd class="last">Year : 1808</dd>
 
                 <dt>Symphony 6, "Pastorale"</dt>
                 <dd><abbr title="Opera">Op.</abbr> 68</dd>
                 <dd>Tone : F Major</dd>
-                <dd>Year : 1808</dd>
+                <dd class="last">Year : 1808</dd>
 
                 <dt>Symphony 7</dt>
                 <dd><abbr title="Opera">Op.</abbr> 92</dd>
                 <dd>Tone : A Major</dd>
-                <dd>Year : 1812</dd>
+                <dd class="last">Year : 1812</dd>
 
                 <dt>Symphony 8</dt>
                 <dd><abbr title="Opera">Op.</abbr> 93</dd>
                 <dd>Tone : F Major</dd>
-                <dd>Year : 1813</dd>
+                <dd class="last">Year : 1813</dd>
 
                 <dt>Symphony 9</dt>
                 <dd><abbr title="Opera">Op.</abbr> 125</dd>
                 <dd>Tone : D Minor</dd>
-                <dd>Year : 1824</dd>
+                <dd class="last">Year : 1824</dd>
 
             </dl>
 
