--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -18,6 +18,13 @@
             <h1>Lyrics of Beethoven's Ode to Joy</h1>
         </header><!-- /header -->
 
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Site Map</a></li>
+            </ul>
+        </nav>
+
         <!-- sidebar -->
         <aside id="sidebar">
             <h2>Navigation</h2>
