navigation & secondary navigation

--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -20,29 +20,10 @@
 
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Site Map</a></li>
+                <li><a href="#" title="Lyric Repository's Home">Home</a></li>
+                <li><a href="#" title="Site Map">Site Map</a></li>
             </ul>
         </nav>
-
-        <!-- sidebar -->
-        <aside id="sidebar">
-            <h2>Navigation</h2>
-            <ul>
-                <li><a href="#">Lyric Repository's Home</a></li>
-                <li><a href="#">Other lyrics from this artist</a>:
-                    <ul>
-                        <li><a href="">lyrics of Fidelio</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Other lyrics from this period</a></li>
-                <li><a href="#">More information on this artist</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Copyright and licenses</a></li>
-                <li><a href="#">Privacy policy</a></li>
-                <li><a href="#">Site Map</a></li>
-            </ul>
-        </aside><!-- /sidebar -->
 
         <!-- content -->
         <div id="content">
@@ -146,6 +127,20 @@
         <!-- footer -->
         <footer>
             <p>This page was built for demonstration purposes.</p>
+            <!-- sidebar -->
+            <aside id="secondary-menu">
+                <h2 class="hide">Secondary navigation</h2>
+                <ul>
+                    <li><a href="#">Lyric Repository's Home</a></li>
+                    <li><a href="#">Other lyrics from this artist</a></li>
+                    <li><a href="#">Other lyrics from this period</a></li>
+                    <li><a href="#">More information on this artist</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Copyright and licenses</a></li>
+                    <li><a href="#">Privacy policy</a></li>
+                    <li><a href="#">Site Map</a></li>
+                </ul>
+            </aside><!-- /sidebar -->
         </footer><!-- /footer -->
 
     </div><!-- /container -->
