refactor header & nav

--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -16,14 +16,16 @@
         <!-- header -->
         <header>
             <h1>Lyrics of Beethoven's Ode to Joy</h1>
-        </header><!-- /header -->
 
-        <nav>
-            <ul>
-                <li><a href="#" title="Lyric Repository's Home">Home</a></li>
-                <li><a href="#" title="Site Map">Site Map</a></li>
-            </ul>
-        </nav>
+            <!-- navigation -->
+            <nav>
+                <ul>
+                    <li><a href="#" title="Lyric Repository's Home">Home</a></li>
+                    <li><a href="#" title="Site Map">Site Map</a></li>
+                </ul>
+            </nav><!-- /navigation -->
+
+        </header><!-- /header -->
 
         <!-- content -->
         <div id="content">
