breadcrump & top of the page

--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -25,6 +25,17 @@
                 </ul>
             </nav><!-- /navigation -->
 
+            <!-- breadcrump -->
+            <div id="breadcrump">
+                <ul>
+                    <li><span><a href="#" title="Lyrics from Bethoven">Bethoven</a></span>
+                        <ul>
+                            <li><a href="#" title="Lyrics of Fidelio">Fidelio</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
         </header><!-- /header -->
 
         <!-- content -->
@@ -138,9 +149,8 @@
                     <li><a href="#">Other lyrics from this period</a></li>
                     <li><a href="#">More information on this artist</a></li>
                     <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Copyright and licenses</a></li>
-                    <li><a href="#">Privacy policy</a></li>
                     <li><a href="#">Site Map</a></li>
+                    <li class="top"><a href="#">Top of the page</a></li>
                 </ul>
             </aside><!-- /sidebar -->
         </footer><!-- /footer -->
