change PNG to GIF & image attributes

--- a/week2/assignment/rework/sample.html
+++ b/week2/assignment/rework/sample.html
@@ -40,7 +40,7 @@
 
         <!-- content -->
         <div id="content">
-            <p><img src="beethoven.jpg" /></p>
+            <p><img src="beethoven.jpg" width="120" height="150" alt="A portrait of Beethoven"/></p>
             <p>Beethoven's last symphony includes part of the <cite>Ode to Joy</cite> poem's written by Friedrich Schiller.</p>
             <blockquote>
                 <p>Freude, schöner Götterfunken<br />
