--- a/week1/assignment/index.html
+++ b/week1/assignment/index.html
@@ -21,6 +21,10 @@
             <h1>Welcome to Gold and Currencies Trader Inc</h1>
             <p>We are trading, buying and selling currencies and gold pepites, with no commissions.</p>
             <p>Explore our services, and get our rates from the top menu.</p>
+            <div class="promo">
+                <h2 class="hide">Promotion</h2>
+                <p>Provide the promotion code <strong>W3C_Rules</strong> during your next subscription</p>
+            </div>
         </div><!-- /#content -->
         <aside id="sidebar">
             <h2>Our services</h2>
