--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <title>alienlebarge/BPIntro @ GitHub</title>
 
-    <link rel="stylesheet" href="assets/css/screen.css" type="text/css" media="projection, screen"/>
+    <link rel="stylesheet/less" type="text/css" href="assets/css/styles.less">
+    <script src="assets/javascript/less.js" type="text/javascript"></script>
 
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
@@ -13,8 +14,9 @@
 </head>
 
 <body>
-<a href="https://github.com/alienlebarge/BPIntro"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<a href="https://github.com/alienlebarge/BPIntro" class="desktopOnly"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
+<!-- container -->
 <div id="container">
 
     <div class="download">
@@ -24,8 +26,20 @@
             <img width="90" src="https://github.com/images/modules/download/tar.png" alt=""></a>
     </div>
 
-    <h1><a href="https://github.com/alienlebarge/BPIntro">BPIntro</a>
-        <span class="small">by <a href="https://github.com/alienlebarge">alienlebarge</a></span></h1>
+    <header>
+        <h1><a href="https://github.com/alienlebarge/BPIntro">BPIntro</a><span class="small">by <a href="https://github.com/alienlebarge">alienlebarge</a></span></h1>
+    </header>
+
+    <div class="navbar">
+        <h2>Navigation</h2>
+        <ul>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+        </ul>
+    </div>
 
     <div class="description">
         Material for the <a href="http://www.w3techcourses.com/course/category.php?id=3" title="Open in new window the course description">Introduction to W3C Mobile Web and Applications Best Practices</a> course.
@@ -88,7 +102,7 @@
         get the source code on GitHub : <a href="https://github.com/alienlebarge/BPIntro">alienlebarge/BPIntro</a>
     </div>
 
-</div>
+</div><!-- /container -->
 
 </body>
 </html>
