creation of columns

--- a/week3/assignment/rework/index.html
+++ b/week3/assignment/rework/index.html
@@ -36,6 +36,7 @@
 
             <!-- breadcrump -->
             <div id="breadcrump">
+                <h2>Breadcrumb</h2>
                 <ul>
                     <li><span><a href="#" title="Lyrics from Bethoven">Bethoven</a></span>
                         <ul>
@@ -49,119 +50,127 @@
 
         <!-- content -->
         <div id="content">
-            <p><img src="assets/image/beethoven.jpg" width="120" height="150" alt="A portrait of Beethoven"/></p>
-            <p>Beethoven's last symphony includes part of the <cite>Ode to Joy</cite> poem's written by Friedrich Schiller.</p>
-            <blockquote>
-                <p>Freude, schöner Götterfunken<br />
-                Tochter aus Elysium,<br />
-                Wir betreten feuertrunken,<br />
-                Himmlische, dein Heiligtum!<br />
-                Deine Zauber binden wieder<br />
-                Was die Mode streng geteilt;<br />
-                Alle Menschen werden Brüder,<br />
-                Wo dein sanfter Flügel weilt.</p>
 
-                <p>Wem der große Wurf gelungen,<br />
-                Eines Freundes Freund zu sein;<br />
-                Wer ein holdes Weib errungen,<br />
-                Mische seinen Jubel ein!<br />
-                Ja, wer auch nur eine Seele<br />
-                Sein nennt auf dem Erdenrund!<br />
-                Und wer's nie gekonnt, der stehle<br />
-                Weinend sich aus diesem Bund!</p>
+            <!-- column -->
+            <div>
+                <p><img src="assets/image/beethoven.jpg" width="120" height="150" alt="A portrait of Beethoven"/></p>
+                <p>Beethoven's last symphony includes part of the <cite>Ode to Joy</cite> poem's written by Friedrich Schiller.</p>
+                <blockquote>
+                    <p>Freude, schöner Götterfunken<br />
+                    Tochter aus Elysium,<br />
+                    Wir betreten feuertrunken,<br />
+                    Himmlische, dein Heiligtum!<br />
+                    Deine Zauber binden wieder<br />
+                    Was die Mode streng geteilt;<br />
+                    Alle Menschen werden Brüder,<br />
+                    Wo dein sanfter Flügel weilt.</p>
 
-                <p>Freude trinken alle Wesen<br />
-                An den Brüsten der Natur;<br />
-                Alle Guten, alle Bösen<br />
-                Folgen ihrer Rosenspur.<br />
-                Küsse gab sie uns und Reben,<br />
-                Einen Freund, geprüft im Tod;<br />
-                Wollust ward dem Wurm gegeben,<br />
-                und der Cherub steht vor Gott.</p>
+                    <p>Wem der große Wurf gelungen,<br />
+                    Eines Freundes Freund zu sein;<br />
+                    Wer ein holdes Weib errungen,<br />
+                    Mische seinen Jubel ein!<br />
+                    Ja, wer auch nur eine Seele<br />
+                    Sein nennt auf dem Erdenrund!<br />
+                    Und wer's nie gekonnt, der stehle<br />
+                    Weinend sich aus diesem Bund!</p>
 
-                <p>Froh,<br />
-                wie seine Sonnen fliegen<br />
-                Durch des Himmels prächt'gen Plan,<br />
-                Laufet, Brüder, eure Bahn,<br />
-                Freudig, wie ein Held zum Siegen.</p>
+                    <p>Freude trinken alle Wesen<br />
+                    An den Brüsten der Natur;<br />
+                    Alle Guten, alle Bösen<br />
+                    Folgen ihrer Rosenspur.<br />
+                    Küsse gab sie uns und Reben,<br />
+                    Einen Freund, geprüft im Tod;<br />
+                    Wollust ward dem Wurm gegeben,<br />
+                    und der Cherub steht vor Gott.</p>
 
-                <p>Seid umschlungen, Millionen!<br />
-                Diesen Kuß der ganzen Welt!<br />
-                Brüder, über'm Sternenzelt<br />
-                Muß ein lieber Vater wohnen.<br />
-                Ihr stürzt nieder, Millionen?<br />
-                Ahnest du den Schöpfer, Welt?<br />
-                Such' ihn über'm Sternenzelt!<br />
-                Über Sternen muß er wohnen.</p>
-            </blockquote>
+                    <p>Froh,<br />
+                    wie seine Sonnen fliegen<br />
+                    Durch des Himmels prächt'gen Plan,<br />
+                    Laufet, Brüder, eure Bahn,<br />
+                    Freudig, wie ein Held zum Siegen.</p>
 
-            <h2>Beethoven's symphonies</h2>
-            <dl>
-                <dt>Symphony 1</dt>
-                <dd><abbr title="Opera">Op.</abbr> 21</dd>
-                <dd>Tone : C Major</dd>
-                <dd class="last">Year : 1800</dd>
+                    <p>Seid umschlungen, Millionen!<br />
+                    Diesen Kuß der ganzen Welt!<br />
+                    Brüder, über'm Sternenzelt<br />
+                    Muß ein lieber Vater wohnen.<br />
+                    Ihr stürzt nieder, Millionen?<br />
+                    Ahnest du den Schöpfer, Welt?<br />
+                    Such' ihn über'm Sternenzelt!<br />
+                    Über Sternen muß er wohnen.</p>
+                </blockquote>
+            </div><!-- /column -->
 
-                <dt>Symphony 2</dt>
-                <dd><abbr title="Opera">Op.</abbr> 36</dd>
-                <dd>D Major</dd>
-                <dd class="last">Year : 1802</dd>
+            <!-- column -->
+            <div>
+                <h2>Beethoven's symphonies</h2>
+                <dl>
+                    <dt>Symphony 1</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 21</dd>
+                    <dd>Tone : C Major</dd>
+                    <dd class="last">Year : 1800</dd>
 
-                <dt>Symphony 3, "Eroica"</dt>
-                <dd><abbr title="Opera">Op.</abbr> 55</dd>
-                <dd>Tone : E flat Major</dd>
-                <dd class="last">Year : 1804</dd>
+                    <dt>Symphony 2</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 36</dd>
+                    <dd>D Major</dd>
+                    <dd class="last">Year : 1802</dd>
 
-                <dt>Symphony 4</dt>
-                <dd><abbr title="Opera">Op.</abbr> 60</dd>
-                <dd>Tone : B flat Major</dd>
-                <dd class="last">Year : 1806</dd>
+                    <dt>Symphony 3, "Eroica"</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 55</dd>
+                    <dd>Tone : E flat Major</dd>
+                    <dd class="last">Year : 1804</dd>
 
-                <dt>Symphony 5</dt>
-                <dd><abbr title="Opera">Op.</abbr> 67</dd>
-                <dd>Tone : C Minor</dd>
-                <dd class="last">Year : 1808</dd>
+                    <dt>Symphony 4</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 60</dd>
+                    <dd>Tone : B flat Major</dd>
+                    <dd class="last">Year : 1806</dd>
 
-                <dt>Symphony 6, "Pastorale"</dt>
-                <dd><abbr title="Opera">Op.</abbr> 68</dd>
-                <dd>Tone : F Major</dd>
-                <dd class="last">Year : 1808</dd>
+                    <dt>Symphony 5</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 67</dd>
+                    <dd>Tone : C Minor</dd>
+                    <dd class="last">Year : 1808</dd>
 
-                <dt>Symphony 7</dt>
-                <dd><abbr title="Opera">Op.</abbr> 92</dd>
-                <dd>Tone : A Major</dd>
-                <dd class="last">Year : 1812</dd>
+                    <dt>Symphony 6, "Pastorale"</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 68</dd>
+                    <dd>Tone : F Major</dd>
+                    <dd class="last">Year : 1808</dd>
 
-                <dt>Symphony 8</dt>
-                <dd><abbr title="Opera">Op.</abbr> 93</dd>
-                <dd>Tone : F Major</dd>
-                <dd class="last">Year : 1813</dd>
+                    <dt>Symphony 7</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 92</dd>
+                    <dd>Tone : A Major</dd>
+                    <dd class="last">Year : 1812</dd>
 
-                <dt>Symphony 9</dt>
-                <dd><abbr title="Opera">Op.</abbr> 125</dd>
-                <dd>Tone : D Minor</dd>
-                <dd class="last">Year : 1824</dd>
+                    <dt>Symphony 8</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 93</dd>
+                    <dd>Tone : F Major</dd>
+                    <dd class="last">Year : 1813</dd>
 
-            </dl>
+                    <dt>Symphony 9</dt>
+                    <dd><abbr title="Opera">Op.</abbr> 125</dd>
+                    <dd>Tone : D Minor</dd>
+                    <dd class="last">Year : 1824</dd>
+
+                </dl>
+            </div><!-- /column -->
 
         </div><!-- /content -->
+
+        <!-- sidebar -->
+        <aside id="secondary-menu">
+            <h2 class="hide">Secondary navigation</h2>
+            <ul>
+                <li><a href="#">Lyric Repository's Home</a></li>
+                <li><a href="#">Other lyrics from this artist</a></li>
+                <li><a href="#">Other lyrics from this period</a></li>
+                <li><a href="#">More information on this artist</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Site Map</a></li>
+                <li class="top"><a href="#">Top of the page</a></li>
+            </ul>
+        </aside><!-- /sidebar -->
 
         <!-- footer -->
         <footer>
             <p>This page was built for demonstration purposes.</p>
-            <!-- sidebar -->
-            <aside id="secondary-menu">
-                <h2 class="hide">Secondary navigation</h2>
-                <ul>
-                    <li><a href="#">Lyric Repository's Home</a></li>
-                    <li><a href="#">Other lyrics from this artist</a></li>
-                    <li><a href="#">Other lyrics from this period</a></li>
-                    <li><a href="#">More information on this artist</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Site Map</a></li>
-                    <li class="top"><a href="#">Top of the page</a></li>
-                </ul>
-            </aside><!-- /sidebar -->
         </footer><!-- /footer -->
 
     </div><!-- /container -->
