link for assignment 2d on the homepage

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
                     <li><a href="week2/assignment/rework/sample.html" title="Assignment 2C">Assignment 2C</a></li>
                 </ul>
             </li><!-- /week 2 -->
-            <li>Week 3</li><!-- /week 3 -->
+            <li>Week 3
+                <ul>Assignment
+                    <li><a href="week3/assignment/rework/index.html" title="Assignment 2D">Assignment 2D</a></li>
+                </ul>
+            </li><!-- /week 3 -->
             <li>Week 4</li><!-- /week 4 -->
             <li>Week 5</li><!-- /week 5 -->
             <li>Week 6</li><!-- /week 6 -->
