fix homepage navigation list

--- a/index.html
+++ b/index.html
@@ -52,13 +52,20 @@
                 </ul>
             </li><!-- /week 1 -->
             <li>Week 2
-                <ul>Assignment
-                    <li><a href="week2/assignment/rework/sample.html" title="Assignment 2C">Assignment 2C</a></li>
+                <ul><li>Assignment
+                        <ul>
+                            <li><a href="week2/assignment/rework/sample.html" title="Assignment 2C">Assignment 2C</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li><!-- /week 2 -->
             <li>Week 3
-                <ul>Assignment
-                    <li><a href="week3/assignment/rework/index.html" title="Assignment 2D">Assignment 2D</a></li>
+                <ul>
+                    <li>Assignment
+                        <ul>
+                            <li><a href="week3/assignment/rework/index.html" title="Assignment 2D">Assignment 2D</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li><!-- /week 3 -->
             <li>Week 4</li><!-- /week 4 -->
