--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 <a href="https://github.com/alienlebarge/BPIntro"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
+<!-- container -->
 <div id="container">
 
     <div class="download">
@@ -76,30 +77,35 @@
         </ul>
     </nav>
 
-    <h2>Authors</h2>
-    <p>alienlebarge (cedric.aellen@alienlebarge.ch)</p>
+    <!-- content -->
+    <div id="content">
+        <h2>Authors</h2>
+        <p>alienlebarge (cedric.aellen@alienlebarge.ch)</p>
 
 
 
-    <h2>Contact</h2>
-    <p>Cédric Aellen (cedric.aellen@alienlebarge.ch)</p>
+        <h2>Contact</h2>
+        <p>Cédric Aellen (cedric.aellen@alienlebarge.ch)</p>
 
 
-    <h2>Download</h2>
-    <p>
-        You can download this project in either <a href="https://github.com/alienlebarge/BPIntro/zipball/master">zip</a> or <a href="https://github.com/alienlebarge/BPIntro/tarball/master">tar formats</a>.
-    </p>
+        <h2>Download</h2>
+        <p>
+            You can download this project in either <a href="https://github.com/alienlebarge/BPIntro/zipball/master">zip</a> or <a href="https://github.com/alienlebarge/BPIntro/tarball/master">tar formats</a>.
+        </p>
 
-    <p>
-        You can also clone the project with <a href="http://git-scm.com">Git</a> by running:
-    </p>
-    <pre>$ git clone git://github.com/alienlebarge/BPIntro</pre>
+        <p>
+            You can also clone the project with <a href="http://git-scm.com">Git</a> by running:
+        </p>
+        <pre>$ git clone git://github.com/alienlebarge/BPIntro</pre>
 
+    </div><!-- /content -->
+
+    <!-- footer -->
     <div class="footer">
         get the source code on GitHub : <a href="https://github.com/alienlebarge/BPIntro">alienlebarge/BPIntro</a>
-    </div>
+    </div><!-- /footer -->
 
-</div>
+</div><!-- /container -->
 
 </body>
 </html>
