fix src link to capitol image

--- a/week5/assignment/rework/index.html
+++ b/week5/assignment/rework/index.html
@@ -40,7 +40,7 @@
 <!-- making the comparison -->
 
 <div class="imgHolder"> <!-- American Capitol from the National Mall -->
-    <img src="/assets/images/capitol.jpg" width="450" height="174" alt="The American Capitol seen from along the National Mall" />
+    <img src="assets/images/capitol.jpg" width="450" height="174" alt="The American Capitol seen from along the National Mall" />
     <p class="caption"><img src="assets/images/usa.gif" width="50" height="31" alt="USA flag" />The American Capitol seen from along the National Mall</p>
 </div>
 
